--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,16 +1,19 @@
-fastapi==0.104.1
-uvicorn==0.24.0
-langchain==0.1.0
-langgraph==0.0.20
-openai==1.3.0
-chromadb==0.4.18
-python-docx==1.1.0
-pypdf2==3.0.1
-sqlalchemy==2.0.23
-pydantic==2.5.0
-python-multipart==0.0.6
-python-jose[cryptography]==3.3.0
-spacy==3.7.2
-lxml==5.1.0
+fastapi
+uvicorn
+langchain
+langgraph
+openai
+chromadb
+python-docx
+pypdf2
+sqlalchemy
+pydantic
+python-multipart
+python-jose[cryptography]
+spacy
+lxml
 spacy[lookups]
-python-dotenv==0.21.1
+python-dotenv
+langchain_openai
+langchain-community
+langchain-chroma
